<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reftext_placeholder"/>
        <EditText
            android:id="@+id/refText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            />
        <RadioGroup
            android:id="@+id/serverType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/typeEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_english"/>
            <RadioButton
                android:id="@+id/typeChinese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_chinese" />
        </RadioGroup>
        <RadioGroup
            android:id="@+id/workMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/workOnceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_once"/>
            <RadioButton
                android:id="@+id/workStreamBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_stream" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/evalMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/evalWordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eval_word"/>
            <RadioButton
                android:id="@+id/evalSentenceBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eval_sentence" />
            <RadioButton
                android:id="@+id/evalParagraphBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eval_paragraph" />
            <RadioButton
                android:id="@+id/evalFreeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eval_free" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/storageMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/storageDisable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_disable" />
            <RadioButton
                android:id="@+id/storageEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/storage_enable" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/textMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/textModeNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textmode_normal" />
            <RadioButton
                android:id="@+id/textModePhoneme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textmode_phoneme" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scorecoeff_placeholder"/>
            <EditText
                android:id="@+id/scoreCoeff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="numberDecimal"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragsize_placeholder"/>
            <EditText
                android:id="@+id/fragSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="numberDecimal"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vad_volume"/>
            <ProgressBar
                android:id="@+id/vadVolume"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:max="120"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vad_interval"/>
            <EditText
                android:id="@+id/vadInterval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="numberDecimal"
                />
        </LinearLayout>
        <Button
            android:id="@+id/recordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_record"
            android:onClick="onRecord"/>
        <Button
            android:id="@+id/localRecordBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_mp3"
            android:onClick="onLocalRecord"/>
       
            <TextView
                android:id="@+id/logText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:textIsSelectable="true"
                android:focusable="true"
                android:scrollbars="vertical"
                android:fadeScrollbars="false"
                android:longClickable="true" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
